--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,8 @@
   <packaging>jar</packaging>
 
   <name>bet356</name>
-  <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <description>BET356</description>
+ 
 
     
   <dependencies>
