--- a/bet365.properties
+++ b/bet365.properties
@@ -1,7 +1,4 @@
  
 
-liga=England Premier League
-utakmica=Chelsea v Swansea
-
-liga1=Northern Ireland Reserve League
-utakmica1=Glentoran Reserves v Coleraine Reserves
+liga1=England Premier League
+utakmica1=Chelsea v Swansea
