--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/User07/Documents/Eclipse/workspace/bet356/activation.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User07/Documents/Eclipse/workspace/bet356/mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
