--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
   <artifactId>commons-lang3</artifactId>
   <version>3.5</version>
 </dependency>
+	  <dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.5.0-b01</version>
+</dependency>
+	  
      </dependencies>
 </project>
 
