--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
     <artifactId>mail</artifactId>
     <version>1.5.0-b01</version>
 </dependency>
-	  
+	  <dependency>
+    <groupId>javax.activation</groupId>
+    <artifactId>activation</artifactId>
+    <version>1.1.1</version>
+</dependency>
      </dependencies>
 </project>
 
