--- a/pom.xml
+++ b/pom.xml
@@ -10,45 +10,57 @@
   <name>bet356</name>
   <description>BET356</description>
  
-
-    
-  <dependencies>
-   <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>2.53.0</version>
-    </dependency>  
-    
-    <dependency>
+<dependencies>
+  
+ 	 <dependency>
      	<groupId>junit</groupId>
       	<artifactId>junit</artifactId>
       	<version>4.12</version>
       
-    </dependency> 
+   	 </dependency> 
+   	 
+   	<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>2.53.0</version>
+	</dependency> 
     
-    <dependency>
-  		<groupId>org.apache.maven.plugins</groupId>
-  		<artifactId>maven-surefire-plugin</artifactId>
-  		<version>2.19.1</version>
-  		<type>maven-plugin</type>
-	</dependency>   
-
-  <dependency>
-  <groupId>org.apache.commons</groupId>
-  <artifactId>commons-lang3</artifactId>
-  <version>3.5</version>
+     
+  	 <dependency>
+  	  <groupId>org.testng</groupId>
+  	  <artifactId>testng</artifactId>
+  	  <version>6.11</version>
+	 </dependency>
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.0</version>
 </dependency>
-	  <dependency>
-    <groupId>javax.mail</groupId>
-    <artifactId>mail</artifactId>
-    <version>1.4.1</version>
-</dependency>
-	  <dependency>
-    <groupId>javax.activation</groupId>
-    <artifactId>activation</artifactId>
-    <version>1.1</version>
-</dependency>
-     </dependencies>
+  </dependencies> 
 </project>
+   	<plugins> 
+  	 <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  </plugins>
+
+
 
 
