--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/User07/Documents/Eclipse/workspace/bet356/activation.jar"/>
 	<classpathentry kind="lib" path="C:/Users/User07/Documents/Eclipse/workspace/bet356/mail.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
